Add support for separate Anime Series and Anime Movies libraries

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
 services:
   ani-cleaner:
-    build:
-      context: .
-      target: prod
+    image: ani-cleaner:1.0.0
     container_name: ani-cleaner
     volumes:
       - /mnt/media:/mnt/media
