added support for regular movies and tv

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,29 @@
-# Path to your anime library inside the container
-ANIME_LIBRARY_PATH=/mnt/media/anime
+# --- Mode ---
+# Choose which mode this container runs in: anime or movies
+MODE=anime
 
-# Number of worker threads (parallel files processed)
+# --- Anime libraries ---
+ANIME_SERIES_PATH=/mnt/media/anime
+ANIME_MOVIES_PATH=/mnt/media/anime_movies
+
+# --- Movies & TV libraries ---
+MOVIES_PATH=/mnt/media/movies
+TV_PATH=/mnt/media/tv
+
+# --- Workers ---
+# Number of worker threads for parallel processing
 MAX_WORKERS=4
 
-# Telegram bot token (create with @BotFather)
-TELEGRAM_BOT_TOKEN=your_bot_token_here
+# --- Rules ---
+# Audio/subtitle rules for anime
+ANIME_ALLOWED_AUDIO=eng,jpn
+ANIME_ALLOWED_SUBS=eng,jpn,heb
 
-# Telegram chat ID (group or user where messages go)
-TELEGRAM_CHAT_ID=your_chat_id_here
+# Audio/subtitle rules for movies & TV
+MOVIES_ALLOWED_AUDIO=eng
+MOVIES_ALLOWED_SUBS=eng,heb
 
-# Allowed subtitle languages (comma-separated, ISO codes)
-ALLOWED_SUBS=eng,jpn,heb
-
-# Allowed audio languages (comma-separated, ISO codes)
-ALLOWED_AUDIO=eng,jpn
+# --- Telegram notifications ---
+# Provide your own bot token and chat ID for daily summary
+TELEGRAM_BOT_TOKEN=your-telegram-bot-token
+TELEGRAM_CHAT_ID=your-chat-id
