--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -32,5 +32,5 @@ jobs:
         with:
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner }}/ani-cleaner:${{ env.TAG }}
-            ghcr.io/${{ github.repository_owner }}/ani-cleaner:latest
+            ghcr.io/${{ github.repository_owner }}/anime-cleaner:${{ env.TAG }}
+            ghcr.io/${{ github.repository_owner }}/anime-cleaner:latest
